[package]
name = "traffic-gen-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
handlers = { path = "../handlers" }
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }