# Copyright 2021, G. Christopher Warrington <code@cw.codes>
#
# This set of tools is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License Version 3 as
# published by the Free Software Foundation.
#
# This set of tools is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
# License for more details.
#
# A copy of the GNU Affero General Public License Version 3 is included in the
# file LICENSE in the root of the repository.
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "traffic-gen-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
handlers = { path = "../handlers" }
tokio = { version = "1", features = ["full"] }